--- a/docRefs.bib
+++ b/docRefs.bib
@@ -1943,7 +1943,7 @@ version: 1},
 	number = {3},
 	urldate = {2021-08-23},
 	journal = {Journal of Logic and Computation},
-	author = {ANDREOLI, JEAN-MARC},
+	author = {Andreoli, Jean-Mark},
 	month = jun,
 	year = {1992},
 	pages = {297--347},
