--- a/SMCC-draft.tex
+++ b/SMCC-draft.tex
@@ -56,14 +56,16 @@
    \vspace*{\stretch{2.0}}
 \end{titlepage}
 \begin{abstract}
-  In previous works from Uustalu et al, proof theory of some variants of skew monoidal categories are developed.
-  We also know that given a skew monoidal category, there is a corresponding skew closed structure on the same category.
-  It motivates us to develop a proof theory of such skew monoidal closed structures and see its meta properties.
-
-  In this paper, a Hilbert-style categorical calculus, a cut-free sequent calculus, and a tagged focused sequent calculus are presented.
-  We prove the soundness and completeness between categorical calculus and sequent calculus.
-  Moreover any two equivalent proofs from cut-free sequent calculus are mapped into same derivation in tagged focused calculus.
-  Therefore we have an effective procedure to determine morphism existence and equivalence in skew monoidal closed categories.
+  Monoidal closed categories are used as standard categorical models of intuitionistic noncommutative linear logic: the monoidal unit and tensor model the multiplicative unit and conjunction; the internal hom models linear implication. In recent years, the weaker notion of skew monoidal closed category has been proposed by Ross Street, where the three structural laws of left and right unitality and associativity are not required to be invertible, they are merely natural transformations with a specific orientation. A question arises naturally: Is it possible to find logical proof systems which are naturally modelled by skew monoidal closed categories? We answer positively by introducing three equivalent deductive systems that serve the purpose: a Hilbert-style calculus; a cut-free sequent calculus; a calculus of normal forms obtained from an adaptation of Andreoli's focusing technique to our skew setting. The resulting focused sequent calculus peculiarly employs a system of tags for keeping track of new formulae appearing in the antecedent and appropriately reducing nondeterministic choices in proof search. Focusing solves the coherence problem for skew monoidal closed categories, which implies the existence of effective procedures for deciding equality of canonical morphisms in all models.
+  
+%%   In previous works from Uustalu et al, proof theory of some variants of skew monoidal categories are developed.
+%%   We also know that given a skew monoidal category, there is a corresponding skew closed structure on the same category.
+%%   It motivates us to develop a proof theory of such skew monoidal closed structures and see its meta properties.
+%% 
+%%   In this paper, a Hilbert-style categorical calculus, a cut-free sequent calculus, and a tagged focused sequent calculus are presented.
+%%   We prove the soundness and completeness between categorical calculus and sequent calculus.
+%%   Moreover any two equivalent proofs from cut-free sequent calculus are mapped into same derivation in tagged focused calculus.
+%%   Therefore we have an effective procedure to determine morphism existence and equivalence in skew monoidal closed categories.
 \end{abstract}
 \section{Introduction}
 Recent discoveries on skew monoidal categories \cite{szlachanyi_skew-monoidal_2012} \cite{lack_skew_2012} \cite{lack_triangulations_2014} (check references in previous papers, at least include papers cited by previous three papers) provide us a good reasons to study their corresponding proof systems.
